<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_today">Today</string>
    <string name="title_details">Details</string>
    <string name="title_days">7 Days</string>
    <string name="title_settings">Settings</string>
    <string name="map">Search</string>
    <string name="type_a_city">type a city</string>
    <string name="TYPE_CITY">TYPE A CITY</string>
    <string name="info_preview">Stay prepared for any weather with accurate forecasts and graphical visualizations that provide you with the information you need to plan your day.</string>
    <string name="content_description">TODO</string>
    <string name="morelia_city">Morelia</string>
    <string name="search_button">Search</string>

</resources>