...
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/info_preview"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#5A9BB8"
...
